# diabetes-prediction-api-development

./: EC2_DEPLOYMENT.md  README.md  pyproject.toml  requirements.txt  run_api.py
models/: feature_indices.pkl  label_encoders.pkl  model_summary.json  scaler.pkl  selected_features.pkl
notebooks/: diabetes_prediction.ipynb
src/: __init__.py  config.py  main.py  model_service.py
