[project]
name = "diabetes-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "imbalanced-learn>=0.12.0",
    "joblib>=1.4.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "requests>=2.31.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "uvicorn[standard]>=0.27.0",
]
